2.0.3, 10.??.2009
Enhancments
  Cavebot: Reworked the cavebot's waypoint walking to include the best features form both map methods
  Eater: No longer eats while in a PZ
  Eater: Attempts to eat items with smaller quantities in other backpacks, freeing space.

2.0.2, 10.12.2009
Enhancments
 ItemConfig: Alphabetized the lists for ease of use
Defects
 Kernel: Fixed the character selection
 ItemConfig: Fixed the Add, edit and delete functions

2.0.1, 03.10.2009
Defects
 All: Fixed crash bug from change in the way Tibia.exe runs
 Fisher: Fixed
 TibiaAuto: Fixed memory leak when reading in name string from memory

2.0.0, 02.10.2009
Enhancments
 Gereral upgrade to Tibia 8.52
 Kernal: fixed an error destroying .skin files when they were loaded and set.
 Item Config: fixed loot list Items not being displayed
 Kernal: Provided for more depressed-looking buttons
 Kernal: added primary skinning ability for dialogs - color schemes
 Fluid Drinker: improved drinking speed when backpacks closed
 Cavebot: decreased walking pause after eating/casting spell
 Python: added 4 minimap reading/writing functions
 Show Map: improved map refresh rate(now it should NEVER miss any squares by walking too fast)
 Map Hacks: allowed for ALL mini map levels to be researched at the same time within Tibia
 Show Map: added functionality for teleports as well as permanently blocked squares
 Cavebot: Will find 'fastest' path based on tile speeds rather than just shortest
 Tiles.xml: Added many different tile attributes, made damaging fields have a long speed so they get avoided when possible
 Python Scripts: Increased maximum parameter text length from 128 to 1024
 Cavebot: Will retreive less items if they are too heavy(ie. 50 spears)
 Cavebot: Will eat more food from corpses
 Spellcaster: Added some default spells to list
 Cavebot & Auto go/log: Can manually edit the x,y,z coordinates before adding to list
 Banker: Added 4 new bankers